kubernetes/apps/arrs/cwa-bdl/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cwa-bdl-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Book Downloader"
    homepage.shamubernetes.com/description: "Find and download ebooks"
    homepage.shamubernetes.com/group: "Downloads"
    homepage.shamubernetes.com/order: "90"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:calibre-web-automated-book-downloader"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "books.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: cwa-bdl
      port: 8084
